[BACKLOG-35632] Added JDK_JAVA_OPTIONS so start-pentaho doesn't have warnings